# schoolportal

./: .dockerignore  .env.example  .gitattributes  Cargo.toml  Dockerfile  docker-compose.yml  package-lock.json  package.json  refactor-schoolportal.ps1  requests.http
School-Request-Management-Portal/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
School-Request-Management-Portal/.tmp/: tsconfig.app.tsbuildinfo
School-Request-Management-Portal/src/: AdminOfficeDashboard.tsx  App.tsx  index.css  (+16 more)
migrations/: 20260616000000_create_portal_ui_tables.sql  20260617000000_align_portal_requests_with_frontend.sql  20260622000000_add_leave_form_edit_fields.sql  20260622010000_add_other_leave_kind.sql  20260623000000_create_announcements.sql  20260624000000_add_message_attachments.sql  20260624000000_create_exit_clearance_requests.sql  20260625000000_add_message_read_status.sql  20260626000000_add_message_attachment_storage_path.sql  20260627000000_configure_message_attachment_storage.sql  20260630000000_add_wellness_leave_duration_fields.sql  20260630010000_add_leave_received_reference_fields.sql  20260706000000_replace_rejected_with_disapproved_status.sql  20260707000000_add_leave_details_section_6b_fields.sql  20260708000000_normalize_portal_schema.sql  20260708010000_fix_normalized_request_date_compatibility.sql  20260708020000_complete_normalized_schema_repair.sql  20260708030000_realtime_purpose_sorting_repair.sql  20260713000000_enforce_unique_app_user_email.sql
src/: db.rs  engine.rs  limiter.rs  main.rs  models.rs  routes.rs
(+15 files in other folders)
